fixing stickler spacing

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: "Spartan";
+  font-family: "Spartan", "Helvetica";
 }
 
 /* main section styleing start */
@@ -57,6 +57,10 @@ main nav ul li {
   color: #fff;
   background: rgb(34, 34, 34);
   background: linear-gradient(180deg, rgba(34, 34, 34, 1) 5%, rgba(120, 120, 120, 1) 70%, rgba(173, 173, 173, 1) 100%);
+}
+
+header a {
+  text-decoration: none;
 }
 
 #menubar li a {
@@ -133,7 +137,7 @@ section header {
 
 header a #main-title {
   font-size: 3rem;
-  font-family: "Spartan";
+  font-family: "Spartan", "Helvetica";
   font-weight: 200;
   text-align: center;
   color: #fff;
@@ -144,7 +148,7 @@ header a #main-title {
 
 header a p {
   font-size: 1.6rem;
-  font-family: "Spartan";
+  font-family: "Spartan", "Helvetica";
   font-weight: 400;
   color: #fff;
   padding-right: 14rem;
@@ -154,7 +158,7 @@ header a p {
 
 header a h2 {
   font-size: 1.6rem;
-  font-family: "Spartan";
+  font-family: "Spartan", "Helvetica";
   font-weight: 400;
   color: #fff;
   padding-right: 14rem;
@@ -166,7 +170,6 @@ header a:nth-child(3) h2 {
   font-size: 1.3rem;
   font-weight: 400;
 }
-
 
 header a:nth-child(3) h2:hover {
   text-decoration: underline;
@@ -188,10 +191,6 @@ header a:nth-child(3) h2 span {
 header a:nth-child(3) figure span {
   color: white;
   font-weight: 300;
-}
-
-header a {
-  text-decoration: none;
 }
 
 header {
@@ -272,5 +271,4 @@ footer nav li {
 footer nav ul li:nth-child(7) {
   padding-right: 11rem;
 }
-
 /* footer site-map end */
